--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -23,7 +23,7 @@ jobs:
       - run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-      - run: npm version prerelease --force
+      - run: npm version patch --force
       - run: git push --follow-tags
       - run: npm publish
         env:
