--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tescord",
-  "version": "0.0.2-1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
